--- a/buildout-development.cfg
+++ b/buildout-development.cfg
@@ -7,12 +7,12 @@
 [buildout]
 
 extends = 
-   adduser.cfg 
-   mysql.cfg 
-   apachephpfcgi.cfg 
-   wordpress.cfg 
-   crontab.cfg 
-   logrotate.cfg
+   buildouts/adduser.cfg 
+   buildouts/mysql.cfg 
+   buildouts/apachephpfcgi.cfg 
+   buildouts/wordpress.cfg 
+   buildouts/crontab.cfg 
+   buildouts/logrotate.cfg
 
 parts -= 
 # disable part: activate apache vhost config 
@@ -25,8 +25,8 @@ parts -=
 #parts += userdata
 
 [userdata]
-name = testuser
-group = testuser
+name = testuser4
+group = testuser4
 
 mysql_database = ${userdata:name}
 mysql_user = root    
