--- a/buildouts/adduser.cfg
+++ b/buildouts/adduser.cfg
@@ -14,6 +14,7 @@ group = testuser
 [adduser]
 recipe = plone.recipe.command
 command =  
-    useradd -s /bin/false -d  ${buildout:directory} ${userdata:name}
+    #useradd -s /bin/false -d  ${buildout:directory} ${userdata:name}
+    sudo adduser --home ${buildout:directory} ${userdata:name}   
 	adduser ${userdata:apache_user_name} ${userdata:name}
  
