--- a/buildouts/mysql.cfg
+++ b/buildouts/mysql.cfg
@@ -161,10 +161,10 @@ command =
     [ ! -f  ${buildout:directory}/var ] &&  mkdir ${buildout:directory}/var
     [ ! -f  ${buildout:directory}/var/log ] &&  mkdir ${buildout:directory}/var/log
     [ ! -f  ${buildout:directory}/var/mysql ] &&  mkdir ${buildout:directory}/var/mysql
-    chown ${userdata:name}:${userdata:group} ${buildout:directory}/var                                             
+    chown -R ${userdata:name}:${userdata:group} ${buildout:directory}/var                                             
     chown ${userdata:name}:${userdata:group} ${buildout:directory}/var/log                                             
-    chown ${userdata:name}:${userdata:group} ${buildout:directory}/var/mysql                                             
-    sudo -u  ${userdata:name} ${binaries:mysql}/mysql_install_db --datadir=${mycnf:datadir} --user=${userdata:name} --log=${buildout:directory}/var/log
+    chown -R ${userdata:name}:${userdata:group} ${buildout:directory}/var/mysql                                             
+    sudo -u ${userdata:name} ${binaries:mysql}/mysql_install_db --datadir=${mycnf:datadir} --user=${userdata:name} --log=${buildout:directory}/var/log
     echo "---------------------------------------------------------------------"                                     
     echo "When you have problems running mysqld mind appamor and access rights."                                     
     echo ""                                                                                                          
